--- a/serverless.yml
+++ b/serverless.yml
@@ -1,33 +1,12 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
-service: sample-todo-app-with-dynamodb # NOTE: update this with your service name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+service: sample-todo-app-with-dynamodb
 
 provider:
   name: aws
   runtime: python3.6
-
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
-
-# you can add statements to the Lambda function's IAM Role here
+  environment:
+    DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
   iamRoleStatements:
-    - Effect: "Allow"
+    - Effect: Allow
       Action:
         - dynamodb:Query
         - dynamodb:Scan
@@ -37,100 +16,52 @@ provider:
         - dynamodb:DeleteItem
       Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
 
+  functions:
+    create:
+      handler: todos/create.create
+      events:
+        - http:
+            path: todos
+            method: post
+            cors: true
 
-# you can define service wide environment variables here
-  environment:
-    DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
+    list:
+      handler: todos/list.list
+      events:
+        - http:
+            path: todos
+            method: get
+            cors: true
 
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.py
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.py
-#    - exclude-me-dir/**
+    get:
+      handler: todos/get.get
+      events:
+        - http:
+            path: todos/{id}
+            method: get
+            cors: true
 
-functions:
-  create:
-    handler: todos/craete.create
-    events:
-      - http:
-        path: todos
-        method: post
-        cors: true
+    update:
+      handler: todos/update.update
+      events:
+        - http:
+            path: todos/{id}
+            method: put
+            cors: true
 
-  list:
-    handler: todos/list.list
-    events:
-      - http:
-        path: todos
-        method: get
-        cors: true
+    delete:
+      handler: todos/delete.delete
+      events:
+        - http:
+            path: todos/{id}
+            method: delete
+            cors: true
 
-  get:
-    handler: todos/get.get
-    events:
-      - http:
-        path: todos/{id}
-        method: get
-        cors: true
-
-  update:
-    handler: todos/update.update
-    events:
-      - http:
-        path: todos/{id}
-        method: put
-        cors: true
-
-  delete:
-    handler: todos/delete.delete
-    events:
-      - http:
-        path: todos/{id}
-        method: delete
-        cors: true
-
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
   resources:
-   Resources:
-     TodosDynamoDbTable:
-       Type: 'AWS::DynamoDB::Table'
-       DeletionPolicy: Retain
+    Resources:
+      TodosDynamoDbTable:
+        Type: 'AWS::DynamoDB::Table'
+        DeletionPolicy: Retain
         Properties:
           AttributeDefinitions:
             -
